# cybernexvpn

./: .env.template  .gitignore  Dockerfile  compose.yml  draft.py  entrypoint.sh  gg.py  manage.py  pyproject.toml
cybernexvpn/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
deploy/nginx/: cybernexvpn.conf
nexvpn/: admin.py  apps.py  authentication.py  models.py  models_utils.py  permissions.py  proxy_utils.py  tasks.py  utils.py  wg_utils.py
nexvpn/api/: exception_handler.py  urls.py
nexvpn/api_clients/: __init__.py  base_api_client.py  schemas.py  tg_bot_api_client.py  wg_api_client.py
nexvpn/clients/: schemas.py  utils.py  wg_api_client.py
nexvpn/enums/: __init__.py  client_type_enum.py  client_updates_enum.py  payment_status_enum.py  transaction_status_enum.py  transaction_type_enum.py
nexvpn/migrations/: 0001_initial.py  0002_client_type_serverconfig_ssl_alter_endpoint_client_and_more.py  0003_payment_idempotency_key.py  0004_alter_payment_status.py  0005_remove_payment_status_transaction_status.py  0006_alter_transaction_status.py  0007_rename_idempotency_key_payment_idempotence_key.py  0008_remove_payment_user.py  0009_promocode_alloweduserpromocode_usedpromocode.py  0010_rename_active_promocode_is_active_and_more.py  0011_transaction_promo_code.py  0012_clientupdates.py  0013_alter_client_type.py  0014_server_tag.py  0015_alter_server_config.py  0016_alter_server_options_server_order_alter_server_price_and_more.py  0017_server_is_hidden.py  0018_nexuser_token.py  0019_nexuser_email.py  (+2 more)
nginx/: Dockerfile  nginx.conf.template
(+39 files in other folders)
